--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,12 @@
 <resources>
     <string name="app_name">SilverPrice</string>
     <string name="silver_price">వెండి ధర</string>
-    <string name="new_weight">కొత్త పట్టిలు</string>
+    <string name="new_weight">కట్టవలసింది</string>
     <string name="wages">కూలీ</string>
-    <string name="old_weight">పాత పట్టిలు</string>
+    <string name="old_weight">మిగులు</string>
     <string name="total">ధర</string>
     <string name="enter_current_silver_rate">Enter Current Silver rate</string>
+    <string name="tarugu">తరుగు</string>
 
     <string-array name="values">
         <item>200</item>
