Option to change Tarugu percentage.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="tarugu">తరుగు</string>
     <string name="_0">0</string>
     <string name="go">go</string>
+    <string name="enter_percent">Enter percent</string>
 
     <string-array name="values">
         <item>200</item>
